Extract CSS to file

--- a/index.htm
+++ b/index.htm
@@ -4,29 +4,8 @@
     <title>Universal printable Solar Calendar</title>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/ICanHaz.min.js"></script>
+    <link href="css/showcase.css" media="screen" rel="stylesheet" type="text/css" >
     <style>
-        table {
-            border: 0;
-            width: 100%;
-        }
-        th {
-            width: 14%;
-            background-color: #ddd;
-            text-align: center;
-            color: #999;
-        }
-        td.empty {
-            background-color: #ddd;
-        }
-        .number {
-            font-size: 2em;
-        }
-        .label {
-            color: #999;
-        }
-        .sunday {
-            color: red;
-        }
     </style>
     <script id="header" type="text/html">
         {{#days}}
