--- a/index.htm
+++ b/index.htm
@@ -12,37 +12,22 @@
             <th>{{name}}</th>
         {{/days}}
     </script>
+    <script id="combo" type="text/html">
+        {{#values}}
+            <option {{#selected}}selected{{/selected}}>{{name}}</option>
+        {{/values}}
+    </script>
+    <script language="javascript" src="js/Calendar.js"></script>
     <script type="text/javascript">
         $(function() {
-            var daysOfWeek = [
-                { name: 'Sunday' },
-                { name: 'Monday' },
-                { name: 'Tuesday' },
-                { name: 'Wednesday' },
-                { name: 'Thursday' },
-                { name: 'Friday' },
-                { name: 'Saturday' }
-            ];
-            $('thead tr').html(ich.header({ days: daysOfWeek }));
+            $('thead tr').html(ich.header({ days: DayOfWeek.all() }));
+            $('select[name="month"]').html(ich.combo({ values: Month.all() }));
         });
     </script>
 </head>
 <body>
     Lat: <input name="lat" value="41.23"></input> Lon: <input name="lon" value="2.11"></input> <br/>
-    Month: <select name="month">
-        <option>January</option>
-        <option>February</option>
-        <option>March</option>
-        <option>April</option>
-        <option>May</option>
-        <option>June</option>
-        <option>July</option>
-        <option>August</option>
-        <option selected>September</option>
-        <option>October</option>
-        <option>November</option>
-        <option>December</option>
-    </select>
+    Month: <select name="month"></select>
     Year: <input name="year" value="2014"></input>
     <input type="submit" value="Show calendar"></input>
     <hr/>
